2010-09-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/tactical.php: Fixed the global
	data showed in tactical view merged from trunk

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* operation/messages/message.php
	  include/functions_db.php: Fixed the ACLs in 
	  the user destination combo merged from trunk

2010-09-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Deleted the useless function
	print_select_groups 

2010-09-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added the function print_select_groups
	merged from trunk

2010-09-22  Sancho Lerena <slerena@artica.es>

        * godmode/reporting/visual_console_builder.elements.php,
        godmode/reporting/visual_console_builder.editor.php: Fixed bug 
        #3073239: bad intervals in combo for period selection.


2010-09-08  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/alerts/alert_list.list.php: fixed the pagination when the list of
	alerts show into alert tab in agent config page.
	
	Fixes: #3055920

2010-09-08  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Merged from trunk. Improved
	  error detection in reports.

2010-09-07 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_compound.php: fixed the url in the ajax
	request.
	Fixes: #3056088

2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php
	operation/events/events_rss.php: Added authentification
	on the RSS of events and fixed ACLs merged from trunk

2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 
	alerts in alerts view and in main search
	Merged from trunk

P2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 