@@ -1,3 +1,8 @@
+2010-10-08 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* operation/agentes/estado_agente.php, ver_agente.php: Fixed a problem
+	with input parameters.
+
 2010-09-30  Sergio Martin <sergio.martin@artica.es>
 
 	* operation/agentes/tactical.php: Fixed the global
